# Pareto-Optimality-Calculation-and-Display

./: NaiveAlgo2D.py  notes.txt
paretoauto/: plot_2d_example.py  plot_3d_example.py  plot_evolution_example.py  pyproject.toml  requirements.txt
paretoauto/benchmarks/: datasets.py  run_bench.py
paretoauto/docs/: METHOD.md  README.md
paretoauto/examples/: quickcheck.py
paretoauto/paretoauto/: __init__.py  cli.py  io.py  selector.py  utils.py  visualise.py
paretoauto/paretoauto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
paretoauto/testHiphop100/: GA_tutorial6_optimisation_Analysis_Generation100_PopulationVariable58_ChildPopulationSize100_Archive_TreeEncoding_RunNumber1.html  GA_tutorial6_optimisation_Analysis_Generation100_PopulationVariable58_ChildPopulationSize100_Archive_TreeEncoding_RunNumber1.js  GA_tutorial6_optimisation_Analysis_Generation10_PopulationVariable58_ChildPopulationSize100_Archive_TreeEncoding_RunNumber1.html  GA_tutorial6_optimisation_Analysis_Generation10_PopulationVariable58_ChildPopulationSize100_Archive_TreeEncoding_RunNumber1.js  GA_tutorial6_optimisation_Analysis_Generation11_PopulationVariable58_ChildPopulationSize100_Archive_TreeEncoding_RunNumber1.html  GA_tutorial6_optimisation_Analysis_Generation11_PopulationVariable58_ChildPopulationSize100_Archive_TreeEncoding_RunNumber1.js  GA_tutorial6_optimisation_Analysis_Generation12_PopulationVariable58_ChildPopulationSize100_Archive_TreeEncoding_RunNumber1.html  (+193 more)
paretoauto/tests/: demo_hiphops.py  demo_old.py  demo_plotly.py  sample_data.csv  test_2d.py  (+4 more)
(+25 files in other folders)
