[project]
name = "paretoauto"
version = "0.1.0"
description = "Pareto front calculation, visualisation and HiP-HOPS integration."
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "openpyxl",
]

[project.scripts]
paretoauto = "paretoauto.cli:main"

[tool.setuptools.packages.find]
include = ["paretoauto*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
